--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="googlebot" content="noindex, nofollow">
+		<meta name="robots" content="noindex, nofollow, noimageindex">
+		<meta name="Description" content="Sòng bạc trực tuyến, nền tảng chơi Game và giải trí đáng tin cậy nhất.">
 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>99Win - Link Vào 99win.com Chính Thức Mới Nhất</title>
+		<link rel="stylesheet"
+			href="https://99vip.pages.dev/index.css"
+			type="text/css">
+	</head>
+	<body>
+		<div class="main">
+			<div class="wrapper">
+				<div class="content-wrapper">
+					<div class="top-section">
+						<img title="safeImg" class="image"
+							src="https://99vip.pages.dev/check.png"
+							style="margin: 0 auto;">
+						<div class="status">
+							<div id="contend" class="text">Kiểm tra bảo mật đã hoàn tất, mạng tốt
+							</div>
+							<div class="loader">
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+
+						</div>
+					</div>
+
+					<div class="bottom-section">
+						<div class="redirect-btn" onclick="handleClick()" id="redirect-btn">bấm vào để nhập</div>
+						<div class="footer">
+							<div class="footer-text" id="footer-text">Kiểm tra bảo mật đã hoàn tất, mạng tốt</div>
+							<div class="footer-text">copyright ©<span id="footer-year">2025</span> Website Detection All
+								Rights Reserved</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<script src="https://99vip.pages.dev/index.js">
+		</script>
+
+
+	</body>
+</html>
